fixed password textarea fontsize to avoid zooming on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@ html {
 
 input[type='text'],
 input[type='number'],
+input[type='password'],
 textarea {
   font-size: 16px; }
 
