--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,7 @@ html{
 
 input[type='text'],
 input[type='number'],
+input[type='password'],
 textarea{
     font-size: 16px;
 }
